@@ -1,3 +1,5 @@
+2013-09-04 Zoltan Tuza <zoltuz@zoltuz-laptop>
+	* modules/paramest/parameter_estimation_patternsearch.m: added, initial parameter value perturbation. Number of initial paramter vectors can be generated with latin hypercube sampling. 
 2013-08-30 Zoltan Tuza <zoltuz@zoltuz-laptop>
 	* auxiliary/parseGetEqOutput.m: bugfix, simbiology's getequation output can have more initial values than state variables, that leads to error in ode15s() function. A simple check looks for initial values with state equtions.
 	* core/txtl_plot.m: built in check to recognize simdata object when the function is called with 3 aruments txtl_plot(t,x,Mobj) vs txtl_(simData,Mobj,dataGroups).
